--- a/src/css/var.css
+++ b/src/css/var.css
@@ -10,7 +10,9 @@
   --green-50: #4dc274;
   --green-100: #38ae5f;
   --gray: #ffffff99; /* 0.6 opacity */
+  --gray-70: #ffffffb3; /* 0.7 opacity */
   --gray-50: #ffffff80;
+  --gray-40: #ffffff66; /* 0.4 opacity */
   --light-gray: #ffffff1a; /* 0.1 opacity */
   --white: #fff;
 
@@ -57,8 +59,8 @@
   /* Container Padding*/
   --container-pd-sm: 0 20px;
   --container-pd-md: 0 32px;
-  --container-pd-lg: 0 128px; 
-  --container-pd-big-lg: 0 64px; 
+  --container-pd-lg: 0 128px;
+  --container-pd-big-lg: 0 64px;
 
   /* Section padding*/
   --section-pd-sm: 40px 0;
