--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,7 +2,7 @@
   padding-top: 8px;
   margin-bottom: 40px;
 }
-.hero .container {
+.hero .hero-inner-container {
   position: relative;
   background-image: linear-gradient(
       357deg,
@@ -17,7 +17,7 @@
   padding: 425px 20px 82px;
 }
 @media (min-resolution: 192dpi) {
-  .hero .container {
+  .hero .hero-inner-container {
     background-image: linear-gradient(
         357deg,
         rgba(0, 0, 0, 0.4) 39.23%,
@@ -32,7 +32,7 @@
     margin-bottom: 50px;
   }
 
-  .hero .container {
+  .hero .hero-inner-container {
     background-image: linear-gradient(
         96deg,
         rgba(0, 0, 0, 0.4) 36.36%,
@@ -45,7 +45,7 @@
   }
 }
 @media only screen and (min-width: 768px) and (min-resolution: 192dpi) {
-  .hero .container {
+  .hero .hero-inner-container {
     background-image: linear-gradient(
         96deg,
         rgba(0, 0, 0, 0.4) 36.36%,
@@ -61,7 +61,7 @@
     margin-bottom: 22px;
   }
 
-  .hero .container {
+  .hero .hero-inner-container {
     background-image: linear-gradient(
         96deg,
         rgba(0, 0, 0, 0.4) 36.36%,
@@ -72,7 +72,7 @@
   }
 }
 @media only screen and (min-width: 1280px) and (min-resolution: 192dpi) {
-  .hero .container {
+  .hero .hero-inner-container {
     background-image: linear-gradient(
         96deg,
         rgba(0, 0, 0, 0.4) 36.36%,
