--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,14 +1,18 @@
 <section class="hero">
   <div class="container container-big">
-    <h1 class="hero-title">
-      Discover the joy of learning
-      <span class="title-accent">English</span> with us!
-    </h1>
-    <a href="#application-form" class="button hero-btn">Leave an application</a>
-    <a href="#footer" class="arrow-down">
-      <svg class="arrow-down-icon" width="20" height="20">
-        <use href="/img/sprite.svg#arrow-down"></use>
-      </svg>
-    </a>
+    <div class="hero-inner-container">
+      <h1 class="hero-title">
+        Discover the joy of learning
+        <span class="title-accent">English</span> with us!
+      </h1>
+      <a href="#application-form" class="button hero-btn"
+        >Leave an application</a
+      >
+      <a href="#footer" class="arrow-down">
+        <svg class="arrow-down-icon" width="20" height="20">
+          <use href="/img/sprite.svg#arrow-down"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 </section>
