--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,11 +1,82 @@
-<section class="section">
+<section class="section" id="reviews">
   <div class="container">
-    <h2 class="section-title">
+    <h2 class="section-title rev-title">
       What our <span class="text-decor">students </span> say
     </h2>
-    <p class="section-text-support">
+    <p class="section-text-support rew-text-support">
       Hear from our students about their learning journey with us, as they share
       their experiences, progress, and the transformative impact
     </p>
+    <ul class="rev-list">
+      <li class="rev-card">
+        <div class="rev-card-student">
+          <img
+            class="student-image"
+            srcset="/img/students/anna@1x.png 1x, /img/students/anna@2x.png 2x"
+            src="/img/students/anna@1x.png"
+            alt="Anna"
+            width="50"
+            height="50"
+          />
+          <div class="student-name-text">
+            <h3 class="student-name">Anna</h3>
+            <p class="student-text">Student</p>
+          </div>
+        </div>
+        <p class="rev-card-feedback">
+          My experience at the language school has been nothing short of
+          amazing. The teachers are dedicated and the learning environment is
+          stimulating. I feel more confident in my English skills.
+        </p>
+      </li>
+      <li class="rev-card">
+        <div class="rev-card-student">
+          <img
+            class="student-image"
+            srcset="
+              /img/students/mykhailo@1x.png 1x,
+              /img/students/mykhailo@2x.png 2x
+            "
+            src="/img/students/mykhailo@1x.png"
+            alt="Mykhailo"
+            width="50"
+            height="50"
+          />
+          <div class="student-name-text">
+            <h3 class="student-name">Mykhailo</h3>
+            <p class="student-text">Student</p>
+          </div>
+        </div>
+        <p class="rev-card-feedback">
+          The school offers a great balance of language theory and practical
+          exercises. The personalized feedback from the teachers has helped me
+          improve my weak areas.
+        </p>
+      </li>
+      <li class="rev-card">
+        <div class="rev-card-student">
+          <img
+            class="student-image"
+            srcset="
+              /img/students/victoria@1x.png 1x,
+              /img/students/victoria@2x.png 2x
+            "
+            src="/img/students/victoria@1x.png"
+            alt="Victoria"
+            width="50"
+            height="50"
+          />
+          <div class="student-name-text">
+            <h3 class="student-name">Victoria</h3>
+            <p class="student-text">Student</p>
+          </div>
+        </div>
+        <p class="rev-card-feedback">
+          I love the dynamic and interactive teaching methods used here. It's a
+          great place to learn English in a fun and effective way. I have
+          definitely seen a big improvement in my language skills.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
