--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" id="about">
   <div class="container">
     <h2 class="section-title">About <span class="text-decor">Us</span></h2>
     <p class="section-text-support about-page">
