--- a/src/partials/logo.html
+++ b/src/partials/logo.html
@@ -1,3 +1,3 @@
-<a class="{=$list-class}" href="/" aria-label="Site logo">
+<a class="{=$list-class}" href="./" aria-label="Site logo">
   english<span class="logo-accent">excellence</span>.
 </a>
