--- a/src/partials/nav-list.html
+++ b/src/partials/nav-list.html
@@ -9,7 +9,7 @@
     <a href="#teachers" class="nav-link">Teachers</a>
   </li>
   <li class="nav-item">
-    <a href="reviews" class="nav-link">Reviews</a>
+    <a href="#reviews" class="nav-link">Reviews</a>
   </li>
   <li class="nav-item">
     <a href="#feedback-form" class="nav-link">Contact us</a>
