--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,5 +1,5 @@
 <section class="section" id="proposal">
-  <div class="container container-big">
+  <div class="container">
     <h2 class="visually-hidden">Our Proposal</h2>
     <div class="proposal-container">
       <h3 class="proposal-title">
