--- a/src/partials/nav-list.html
+++ b/src/partials/nav-list.html
@@ -12,6 +12,6 @@
     <a href="#reviews" class="nav-link">Reviews</a>
   </li>
   <li class="nav-item">
-    <a href="#feedback-form" class="nav-link">Contact us</a>
+    <a href="#application-form" class="nav-link">Contact us</a>
   </li>
 </ul>
