--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -293,9 +293,9 @@
               </div>
             </div>
             <p class="rev-card-feedback">
-              I really enjoyed working with the team — everyone collaborated
-              seamlessly, like a well-oiled machine, supporting each other at
-              every stage of the process.
+              The project was a great opportunity to apply our knowledge in
+              practice and develop web development skills. Teamwork helped us
+              distribute tasks and successfully bring our idea to life.
             </p>
           </div>
         </div>
